--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/main.tscn", "res://Scenes/PlayerWater.tscn", "res://Scenes/tiles.tscn")
-center_split_offset=-372
+open_scenes=PackedStringArray("res://Scenes/hallway level.tscn", "res://Scenes/square level.tscn", "res://Scenes/PlayerWater.tscn", "res://Scenes/tiles.tscn")
+center_split_offset=-468
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://Scenes/PlayerWater.tscn"
+current_scene="res://Scenes/hallway level.tscn"
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Falling.gd", "res://Scripts/Grid.gd", "res://Scripts/Idle.gd", "res://Scripts/Jump.gd", "res://Scripts/Move.gd", "res://Scripts/PlayerState.gd", "res://Scripts/PlayerWater.gd", "res://Scripts/State Machine.gd", "res://TileGrid.gd"]
-selected_script="res://Scripts/Move.gd"
+selected_script="res://Scripts/Grid.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
